# simple-ws-demo

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  package-lock.json  package.json  pyproject.toml
app/: main.py  manager.py
app/static/js/: script.js
app/templates/: index.html
