[project]
name = "simple-ws-demo"
version = "0.1.0"
description = "Demo on creating a simple WebSocket server with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.8.0"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D213", "ISC001"]
